--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -674,7 +674,7 @@
                                             </div>
                                         </div>
                                         <br>
-                                        <table id="t1" class="table table-hover table-responsive table-condensed" style="font-size: smaller">
+                                        <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                             <tr>
                                                 <th>Company</th>
                                                 <th>Cash invested</th>
@@ -734,7 +734,7 @@
                                                     </div>
                                                 </td>
 
-                                                <td>
+                                                <td  class="col-md-1">
                                                     <input type="checkbox" [(ngModel)]="performance.autoCalculation" (ngModelChange)="autoCalculationTotalAndMultiple(performance)">
                                                 </td>
 
@@ -752,7 +752,7 @@
                                                     </div>
                                                 </td>
 
-                                                <td>
+                                                <td class="col-md-2">
                                                     <div *ngIf="!performancesComparison(performance)">
                                                         <p style="color:red;">The row does not match any of the IDD</p>
                                                     </div>
