--- a/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
@@ -130,6 +130,7 @@
                     <!--<th>ACTIONS</th>-->
                     <th>UPDATED</th>
                     <th>UPDATEDBY</th>
+                    <th></th>
                 </tr>
                 </thead>
 
@@ -150,6 +151,11 @@
                     <!--<td width="5%">-->
                         <!--&lt;!&ndash;<a><i class="glyphicon glyphicon-trash"></i></a>&ndash;&gt;-->
                     <!--</td>-->
+                    <td>
+                        <button type="button" class="btn-xs btn-danger" style="display: inline-block"  (click)="remove(memo)">
+                            <span class="glyphicon glyphicon-minus"></span>
+                        </button>
+                    </td>
                 </tr>
                 </tbody>
             </table>
